<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgerund"
    android:fillViewport="true"
    tools:context=".Verification">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rel_login_one"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/shape_login_rectangel"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_logo"></ImageView>
        </RelativeLayout>
        <RelativeLayout
android:layout_marginTop="-50dp"
            android:layout_marginLeft="@dimen/margin_l_R"
            android:layout_marginRight="@dimen/margin_l_R"
            android:background="@drawable/shape_corner_shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_login_one">

            <ImageView
                android:layout_margin="10dp"
                android:layout_alignParentLeft="true"
                android:id="@+id/img_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black_24dp"></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_verification_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="09136579901"
                    android:gravity="center"
                    android:textColor="@color/txt_select"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_l_R">

                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:paddingRight="@dimen/margin_l_R"
                    android:id="@+id/txtinput_login_mobile"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                </com.google.android.material.textfield.TextInputLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:translationZ="2dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:layout_centerVertical="true"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_smartphone"></ImageView>
                    <EditText
                        android:textSize="@dimen/txt_size_10"
                        android:gravity="center"
                        android:textColor="@color/txt_select"
                        android:textColorHint="@color/txt_unselect"
                        android:singleLine="true"
                        android:inputType="number"
                        android:id="@+id/edt_dialog_code"
                        android:hint="@string/edt_text_enterCode"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_edt"
                        android:layout_marginRight="@dimen/margin_l_R"
                        android:layout_marginLeft="@dimen/margin_l_R"></EditText>
                </RelativeLayout>

                <Button
                    android:textColor="@color/btn_text"
                    android:id="@+id/btn_dialog_enter"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_margin="@dimen/margin_l_R"
                    android:text="@string/btn_login"
                    android:background="@drawable/btn_selector"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_btn"/>
                <RelativeLayout
                    android:id="@+id/rel_verification_refresh"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView

                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_refresh_black_24dp"
                       android:layout_centerVertical="true"
                        android:layout_alignRight="@+id/txt_verification_trysend"
                        android:layout_marginRight="-25dp"
                        ></ImageView>
                    <TextView
                        android:id="@+id/txt_verification_trysend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trysend"
                        android:textColor="@color/whait"
                        android:layout_margin="@dimen/margin_l_R"
                        ></TextView>
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>




</ScrollView>